--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ height: 462px;border-radius: 20px; background-size: cover;"></div>
                 style="width: 360px; background: linear-gradient(97deg, #57BDFF 0%, #3C9CFF 28%, #53F9FF 100%);padding-left:10px;padding-right:10px;">hassle-free.</span>
         </h1>
     </section>
-    
+
     <div class="container">
         <div class="card-2">
             <div class="card__body">
@@ -276,12 +276,17 @@ height: 462px;border-radius: 20px; background-size: cover;"></div>
         </div>
     </div>
     <div class="cta">
+
         <div>
             <h1>Stay up to date with aspiration investment</h1>
         </div>
-        <div class="email-input">
-            <input type="text" placeholder="Email Address">
-            <button>Subscribe Now</button>
+        <div class="cta-item">
+            <div class="email-input">
+
+                <input type="text" placeholder="Email Address">
+                <button>Subscribe Now</button>
+
+            </div>
         </div>
     </div>
     <section class="footer">
